src/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Lead_Division__c</fullName>
        <description>Core - This field is mapped from lead &apos;Division&apos;</description>
        <label>Lead Division</label>
        <picklist>
            <picklistValues>
                <fullName>Primary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Secondary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HED</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lead_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Learning_Solutions_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Contains the learning solution consultant from the account manager&apos;s sales team.</description>
        <inlineHelpText>Contains the learning solution consultant from the account manager&apos;s sales team.</inlineHelpText>
        <label>Learning Solutions Contact</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Legacy_Engagement_Date__c</fullName>
        <description>CORE - hidden field that captures the original opportunities Re-engagement date and fires due date of the Re-enagement task</description>
        <label>Legacy Engagement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <description>Used to capture the Level on the Opportunity from the Proposal</description>
        <label>Level</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Likelihood_of_Buying__c</fullName>
        <description>Original assessment on likelihood to close the sale, that was made on the Lead before conversion on to the opportunity.</description>
        <label>Likelihood of Buying</label>
        <picklist>
            <picklistValues>
                <fullName>Very Likely</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quite Likely</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Very Likely</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buyer will not buy</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Line_of_Business__c</fullName>
        <description>The following field identifies the Opportunity Owner&apos;s Line of Business per their user record</description>
        <formula>TEXT(Owner.Line_of_Business__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Line of Business</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loan_Status__c</fullName>
        <description>The following field identifies whether the loan a student has submitted was approved or rejected</description>
        <label>Loan Status</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Local_Language__c</fullName>
        <description>Indicates if the opportunity is for a local product.</description>
        <inlineHelpText>Indicates if the opportunity is for a local product.</inlineHelpText>
        <label>Local Language</label>
        <picklist>
            <picklistValues>
                <fullName>Benelux</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scandi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>France</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Germany</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MEAC</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lost_Reason_Other__c</fullName>
        <description>If the reason for closure is &quot;other&quot;, then this field is used to capture the other value</description>
        <label>Lost Reason Other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lost_Reason__c</fullName>
        <description>This field captures the reason an opportunity was either closed  won or closed lost.</description>
        <label>Closed\Lost Reason</label>
        <picklist>
            <controllingField>StageName</controllingField>
            <picklistValues>
                <fullName>Price\Value</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Available Budget</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competitor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Failed Academic Vetting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Content</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change of Circumstances</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Market2__c</fullName>
        <label>Market2</label>
        <picklist>
            <picklistValues>
                <fullName>ZA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <description>The following field identifies the Opportunity Owner&apos;s User record identified market.</description>
        <formula>TEXT(Owner.Market__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Market</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mass_Opportunity_Generation_Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The following field identifies whether the opportunity was created using the mass opportunity generation functionality</description>
        <label>Generated from Potential Targets</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Milestone__c</fullName>
        <description>Specifies the milestones at each of the opportunity stages</description>
        <formula>CASE(StageName, &quot;Identification&quot;, &quot;Identified Prospect&quot;, &quot;Qualification&quot;, &quot;Qualified by Account Manager or Learning Solutions Consultant; passed to Learning Solutions Manager&quot;, &quot;Scoping&quot;,&quot;Confirmed additional Needs Analysis&quot;,&quot;Solutioning&quot;,&quot;Solution Identified&quot;,&quot;Internal Approval&quot;,&quot;Manager Deal Sign-Off&quot;,&quot;Proposal&quot;,&quot;Proposal Sent&quot;,&quot;Negotiation&quot;,&quot;Agreement reached&quot;,&quot;Closed Won&quot;,&quot;Agreement Confirmed&quot;,&quot;Agreement Received&quot;,&quot;Agreement Signed&quot;,&quot;Review&quot;,&quot;Received Feeback from Customer based on existing Product In Use&quot;,&quot;Rollover Confirmed&quot;,&quot;Confirmation Received&quot;,&quot; &quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Specifies the milestones at each of the opportunity stages</inlineHelpText>
        <label>Milestone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile_Last_Updated__c</fullName>
        <description>Use by mobile to track when fields were last updated on the mobile app.</description>
        <label>Mobile Last Updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Multiple_Product_Options__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Multiple Frontlist</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Omit__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field used by US HE team</description>
        <label>Omit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Oppty_Record_Count__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Oppty Record Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Original_Oppty__c</fullName>
        <description>Hidden field, the ID from which the opportunity was cloned if this was a renewal</description>
        <label>Original_Oppty</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Lead_Source__c</fullName>
        <description>Where Lead source = &quot;Other&quot;, this field provides the description of other. This field is mapped on Lead conversion</description>
        <label>Other Lead Source</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outcomes_Flag__c</fullName>
        <formula>IMAGE( 
CASE(  Outcomes__c, 
&quot;Green&quot;, &quot;/resource/1394066910000/efficacy_green&quot;,
&quot;Amber/Green&quot;, &quot;/resource/1394067069000/efficacy_ambergreen&quot;,
&quot;Amber/Red&quot;, &quot;/resource/1394067036000/efficacy_amberred&quot;,
&quot;Red&quot;, &quot;/resource/1394067003000/efficacy_red&quot;, 
&quot;/resource/1394067094000/efficacy_all&quot;), 
&quot;Outcomes Flag&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Outcomes Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outcomes__c</fullName>
        <description>Opportunity efficacy rating</description>
        <label>Outcomes</label>
        <picklist>
            <picklistValues>
                <fullName>Green</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amber/Green</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amber/Red</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Owner_Role__c</fullName>
        <description>The following field identifies which role the Opportunity owner is assigned to per the organization&apos;s role hierarchy</description>
        <formula>Owner.UserRole.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Placement_Assessment_Score__c</fullName>
        <description>This field shows whether the student was successful (passing score) or unsuccessful (non-passing score) upon taking a placement assessment for the opportunity.</description>
        <label>Placement Assessment Score</label>
        <picklist>
            <picklistValues>
                <fullName>Successful</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unsuccessful</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Planning_Implementation_Flag__c</fullName>
        <formula>IMAGE( 
CASE(  Planning_Implementation__c, 
&quot;Green&quot;, &quot;/resource/1394066910000/efficacy_green&quot;,
&quot;Amber/Green&quot;, &quot;/resource/1394067069000/efficacy_ambergreen&quot;,
&quot;Amber/Red&quot;, &quot;/resource/1394067036000/efficacy_amberred&quot;,
&quot;Red&quot;, &quot;/resource/1394067003000/efficacy_red&quot;, 
&quot;/resource/1394067094000/efficacy_all&quot;), 
&quot;Planning Flag&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Planning &amp; Implementation Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Planning_Implementation__c</fullName>
        <description>Opportunity efficacy field</description>
        <label>Planning &amp; Implementation</label>
        <picklist>
            <picklistValues>
                <fullName>Green</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amber/Green</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amber/Red</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Preferred_Campus__c</fullName>
        <description>Field to show the campus that the Student wants to attend to take their qualification. This is mapped on Lead conversion, and subsequently updated on the opportunity.</description>
        <label>Preferred Campus</label>
        <picklist>
            <picklistValues>
                <fullName>Bedfordview</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bloemfontein</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cape Town</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Durban</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Durbanville</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>East London</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Midrand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nelspruit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Port Elizabeth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Potchefstroom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pretoria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Randburg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vanderbijlpark</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Primary_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Primary Contact of an Opportunity.  This contact is set by a Trigger that associates the primary Contact of the Contact Roles on the Opportunity.</description>
        <inlineHelpText>Primary Contact of an Opportunity.  This contact is set by a Trigger that associates the primary Contact of the Contact Roles on the Opportunity.</inlineHelpText>
        <label>Primary Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_Selling_Account__c</fullName>
        <description>US Field Sales only: Used to denote the Primary Selling Account of the Account to which the Opportunity is related</description>
        <formula>Account.Primary_Selling_Account__r.Name</formula>
        <label>Primary Selling Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Converted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Product Converted?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Count__c</fullName>
        <label>Product Count</label>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Product_Offerings__c</fullName>
        <description>Used to enable the users to go directly to the Product Selector from the Course and Contact Opportunity Related lists.</description>
        <formula>HYPERLINK(&apos;/apex/oneCRMProductSelectorWizardV2?oppId=&apos;+Id,&apos;Product Offerings&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Offerings</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <label>Product Type</label>
        <picklist>
            <picklistValues>
                <fullName>print</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>custom print</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ebook</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>custom ebook</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>mylab/mastering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>custom mylab/mastering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>simulation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>equella</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>learning studio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>course design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>learning catalytic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ELT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>revel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assessment</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Qualification_Campus__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used to capture the Campus from the Proposal on the Opportunity</description>
        <label>Campus</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunties</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Qualification_Code__c</fullName>
        <description>Used to populate the Qualification Code on the Opportunity to communicate to eVision and Navision</description>
        <label>Qualification Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Qualification_Level_Code__c</fullName>
        <description>Used to communicate the Qualification Level Code to eVision and Navision</description>
        <label>Qualification Level Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Qualification__c</fullName>
        <description>This field will be stamped with the name of the qualification the student is pursuing once modules are selected</description>
        <label>Qualification Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Re_engagement_Date__c</fullName>
        <description>The date when representatives should re-engage with the customer with regards to renewing this opportunity</description>
        <label>Re-engagement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Received_Signed_Registration_Contract__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The following field identifies whether the student has signed and submitted the registration contract to Pearson</description>
        <label>Received Signed Registration Contract</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Registration_Payment_Reference1__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The following field identifies the Registration Payment Reference associated to the student&apos;s registration</description>
        <label>Registration Payment Reference</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Registration_Payment_Reference__c</fullName>
        <description>The following field identifies the Registration Payment Reference associated to the student&apos;s registration</description>
        <label>Registration Payment Reference</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field identifies other opportunities that may be associated to this Opportunity.</description>
        <label>Related Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Renewal_Date__c</fullName>
        <label>Renewal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reviewer__c</fullName>
        <description>The field identifies who the academic vetting escalation reviewer is</description>
        <label>Escalation Reviewer</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Selling_Period__c</fullName>
        <description>This specifies the selling period for the adoption.</description>
        <inlineHelpText>This specifies the selling period for the adoption.</inlineHelpText>
        <label>Selling Period</label>
        <picklist>
            <picklistValues>
                <fullName>2014 - Fall</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2014 - Spring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2015 - Fall</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2015 - Spring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2016 - Fall</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2016 - Spring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2017 - Fall</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2017 - Spring</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Selling_Year__c</fullName>
        <description>Selling Year.</description>
        <label>Selling Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Type__c</fullName>
        <label>Service Type</label>
        <picklist>
            <picklistValues>
                <fullName>Standard Integration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom Integration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom Integration Plus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Course Set Up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Getting Started Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Course Builder Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assignment Strategy Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Demand Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training Package</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Success Analysis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Success Analysis Plus</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Special_Price_Request_Open__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox will be checked when a special price request is created and not in a status of rejected, approved, or recalled.</description>
        <label>Special Price Request Open</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Special_Pricing_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field will be marked &quot;True&quot; when the Product in Use on the Opportunity has Special Pricing</description>
        <label>Special Pricing Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Special_Pricing_Renewal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The following field identifies whether the student or contact qualifies for special pricing renewal based on some offline determined criteria</description>
        <label>Special Pricing Renewal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Spring__c</fullName>
        <description>This field identifies how many Spring enrollments are related to the University Course this Opportunity originated from.</description>
        <label>Spring</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Stage_Customer_Activities__c</fullName>
        <formula>CASE(StageName, 
&quot;1 - Prospecting&quot;,&quot;Assess the possible value of the company and the sales person. Agree to a meeting.&quot;,
&quot;2 - Qualification&quot;,&quot;Engage in dialogue with Pearson. Discuss problems, implications, value of a solution, buying process. Facilitate access to a larger network.&quot;,
&quot;3 - Needs Analysis&quot;,&quot;Provide commitment to invest in exploring and evaluating a solution. Engage in scoping the solution by providing Pearson with all relevant information. All stakeholders/decision makers involved and engaged.&quot;,
&quot;4 - Solutioning&quot;,&quot;Specify detailed technical requirements.&quot;,
&quot;5 - Proposal&quot;,&quot;Evaluate proposal, assess suitability, value-for-money, competitive differentiation.  Internal dialogue with key stakeholders.  Clarification with Pearson.  Discuss implementation plan and define measurements for success.&quot;,
&quot;6 - Renewal Confirmation&quot;,&quot;If in agreement provide PO #, delivery address, # units. If not in agreement provide feedback and agree to a new needs analysis.&quot;,
&quot;7 - Negotiation&quot;,&quot;Request amended proposal if required. Agree preferred options. Obtain project approval (budget, legal sign-off, procurement).&quot;,
&quot;8 - Won (Verbal Agreement)&quot;,&quot;Begin detailed planning for implementation. Supply bill to/ship to information, PO #, signatory, agree to payment terms.&quot;,
&quot;9 - Contract&quot;,&quot;Negotiate contract terms, reach agreement, provide signature.&quot;,
&quot;10 - In Production&quot;,&quot;Receive instructor training if appropriate.  Design implementation plan.&quot;,
&quot;11 - Invoiced&quot;,&quot;Ensure invoice is correct. Pay. Execute implementation plan.&quot;,
&quot;12 - Lost&quot;,&quot;None&quot;,
&quot;Unknown&quot;)</formula>
        <label>Stage Customer Activities</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stage_Description__c</fullName>
        <formula>CASE(StageName, &quot;1 - Prospecting&quot;,&quot;Gain access to an influencer, decision maker, or gatekeeper in assigned territory.  Create a climate for dialogue.  Build rapport.&quot;,&quot;2 - Qualification&quot;,&quot;Identify customer problem(s) that we are likely to be able to solve.  Ensure that the network of contacts has budget, [buying] authority, need, [purchase] timeframe (BANT).&quot;,&quot;3 - Needs Analysis&quot;,&quot;Conduct a detailed needs analysis and confirm that we can solve the customer’s problem(s) cost effectively and better than the competition.  Explore problems in more depth.  Discuss expected benefits and success criteria for the project.&quot;,&quot;4 - Solutioning&quot;,&quot;Define a specific solution (or options) that solves the customer&apos;s problem.  Ensure that the solution is viable and profitable for Pearson.&quot;,&quot;5 - Proposal&quot;,&quot;Deliver internally approved proposal by agreed deadline, first ensuring that the solution is viable and profitable.&quot;,&quot;6 - Renewal Confirmation&quot;,&quot;Confirm that the customer wishes to purchase the same solution as the previous year.&quot;,&quot;7 - Negotiation&quot;,&quot;Modify proposal if required.&quot;,&quot;8 - Won (Verbal Agreement)&quot;,&quot;Customer agrees to purchase solution.&quot;,&quot;9 - Contract&quot;,&quot;Compulsory for Institutional Purchases.  Contractual closure.&quot;,&quot;10 - In Production&quot;,&quot;Opportunity has been handed off to production.&quot;,&quot;11 - Invoiced&quot;,&quot;Customer invoiced, product/service delivered.  Opportunity will not appear in the pipeline but will appear in the monthly sales report.&quot;,&quot;12 - Lost&quot;,&quot;An opportunity that we have stopped investing time in.&quot;,&quot;Unknown&quot;)</formula>
        <label>Stage Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stage_Milestone__c</fullName>
        <formula>CASE(StageName, 
&quot;1 - Prospecting&quot;,&quot;Identify and start dialogue with stakeholder(s). Gain agreement to investigate.&quot;,
&quot;2 - Qualification&quot;,&quot;Uncover and develop customer problems.  Verify that the customer is able to place an order.&quot;,
&quot;3 - Needs Analysis&quot;,&quot;Develop a specific set of requirements in order to design a solution.&quot;,
&quot;4 - Solutioning&quot;,&quot;Design a solution that solves the customer’s problem cost effectively.&quot;,
&quot;5 - Proposal&quot;,&quot;Send a proposal that matches the customer needs.  Ensure the proposal is read and understood.&quot;,
&quot;6 - Renewal Confirmation&quot;,&quot;Agree renewal, send to production.&quot;,
&quot;7 - Negotiation&quot;,&quot;Resolve issues, reach compromise, form agreement.&quot;,
&quot;8 - Won (Verbal Agreement)&quot;,&quot;Gain verbal commitment from customer.&quot;,
&quot;9 - Contract&quot;,&quot;Draft legal contract between customer and Pearson.&quot;,
&quot;10 - In Production&quot;,&quot;Produce the solution within specified timeframe.&quot;,
&quot;11 - Invoiced&quot;,&quot;Invoice has been issued.  Opportunity no longer in pipeline.&quot;,
&quot;12 - Lost&quot;,&quot;An opportunity that did not result in an invoice.&quot;,
&quot;Unknown&quot;)</formula>
        <label>Stage Milestone</label>
        <type>Text</type>
    </fields>
</CustomObject>